# cpp-labs

./: .clang-format  LICENSE  README.md
lab1/task1/: CMakeLists.txt
lab1/task1/src/: main.cpp
lab11/task1/src/: main.cpp
lab11/task2/src/: main.cpp
lab13/task1/src/: main.cpp
lab14/task1/src/: main.cpp
lab14/task2/src/: main.cpp
lab15/task1/src/: Group.cpp  IdCard.cpp  IdCard.h  Student.cpp  main.cpp
lab2/task3/src/: main.cpp
lab2/task4/src/: main.cpp
lab3/task4/src/: main.cpp
lab3/task5/src/: main.cpp
lab4/task2/src/: main.cpp
lab5/task2/src/: main.cpp
lab5/task3/src/: main.cpp
lab6/task1/src/: main.cpp
lab7/task2/src/: main.cpp
lab7/task3/src/: main.cpp
lab8/task1/src/: main.cpp
lab9/task1/src/: main.cpp
lab9/task2/src/: main.cpp
labs/lab-1/task1/src/: main.cpp
labs/lab-10/task1/src/: main.cpp
labs/lab-15/task1/: CMakeLists.txt
labs/lab-15/task1/src/: GradeManager.cpp  GradeManager.h  Group.h  Student.h
labs/lab-2/task1/src/: main.cpp
labs/lab-2/task2/src/: main.cpp
labs/lab-3/task1/src/: main.cpp
labs/lab-3/task2/src/: main.cpp
labs/lab-3/task3/src/: main.cpp
labs/lab-4/task1/src/: main.cpp
labs/lab-5/task1/src/: main.cpp
labs/lab-5/task4/src/: main.cpp
labs/lab-6/task2/src/: main.cpp
project/: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
project/src/: commands.cpp  commands.hpp  exceptions.hpp  main.cpp  menu.cpp  menu.hpp  person_database.cpp  person_database.hpp  utils.cpp  utils.hpp
project/src/models/: person.cpp  person.hpp  professor.cpp  professor.hpp  student.cpp  student.hpp
(+1 files in other folders)
